Printer Service (ESC/POS Communication)
- Multi-language support: Receipts in English, Sinhala, and Tamil
- Direct printing: No Windows print dialogs required
- Printer discovery: Automatic detection of USB and Serial printers
- Queue management: Failed print retry system
- Template system: Flexible receipt formatting
ESC/POS compatibility: Works with most thermal printers

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -366,6 +366,41 @@
     "symbol": "Rs.",
     "format": "Rs. {amount}"
   },
+  "printer": {
+    "configuration": "Printer Configuration",
+    "configured": "Configured Printers",
+    "discovered": "Discovered Printers",
+    "noConfigured": "No printers configured yet",
+    "noDiscovered": "No printers found. Make sure your thermal printer is connected and powered on.",
+    "discover": "Discover Printers",
+    "usbPrinters": "USB Printers",
+    "serialPrinters": "Serial Port Printers",
+    "addPrinter": "Add Printer",
+    "name": "Printer Name",
+    "paperWidth": "Paper Width",
+    "charactersPerLine": "Characters per Line",
+    "setAsDefault": "Set as Default Printer",
+    "default": "Default",
+    "testSuccess": "Test print successful! Check your printer for the test receipt.",
+    "testFailed": "Test print failed",
+    "testError": "Error testing printer connection",
+    "addSuccess": "Printer added successfully",
+    "addFailed": "Failed to add printer",
+    "saveError": "Error saving printer configuration",
+    "deleteConfirm": "Are you sure you want to delete this printer?",
+    "deleteSuccess": "Printer deleted successfully",
+    "deleteFailed": "Failed to delete printer",
+    "deleteError": "Error deleting printer",
+    "connecting": "Connecting to printer...",
+    "connected": "Printer connected",
+    "disconnected": "Printer disconnected",
+    "printQueue": "Print Queue",
+    "queueEmpty": "Print queue is empty",
+    "processing": "Processing print jobs...",
+    "jobCompleted": "Print job completed",
+    "jobFailed": "Print job failed",
+    "retrying": "Retrying print job..."
+  },
   "/": "/",
   "T": "T",
   "q": "q",
