Fixes and Improvements

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,14 +39,75 @@
   "dashboard": {
     "welcome": "Welcome",
     "todaySales": "Today's Sales",
+    "todayCosts": "Today's Costs",
     "todayProfit": "Today's Profit",
+    "transactions": "Transactions",
     "lowStockItems": "Low Stock Items",
     "pendingPayments": "Pending Payments",
+    "cashInDrawer": "Cash in Drawer",
+    "pendingReceivables": "Pending Receivables",
+    "pendingPayables": "Pending Payables",
     "systemStatus": "System Status",
     "apiStatus": "API Status",
     "userRole": "User Role",
     "authenticationActive": "Authentication Active",
-    "lowStock": "Low Stock Items"
+    "lowStock": "Low Stock Items",
+    "quickActions": "Quick Actions",
+    "pressF12": "Press F12 for quick cash sale",
+    "cashFlow": "Cash Flow",
+    "moneyIn": "Money In",
+    "moneyOut": "Money Out",
+    "currentBalance": "Current Balance",
+    "alerts": "Alerts",
+    "noAlerts": "No alerts at this time",
+    "takeAction": "Take Action",
+    "justNow": "Just now",
+    "minutesAgo": "{{count}} minutes ago",
+    "hoursAgo": "{{count}} hours ago",
+    "daysAgo": "{{count}} days ago",
+    "overduePayment": "Overdue Payment",
+    "cashDrawer": "Cash Drawer",
+    "system": "System",
+    "notification": "Notification",
+    "openDrawer": "Open Drawer",
+    "closeDrawer": "Close Drawer",
+    "openCashDrawer": "Open Cash Drawer",
+    "closeCashDrawer": "Close Cash Drawer",
+    "openingBalance": "Opening Balance",
+    "actualBalance": "Actual Balance (Count Cash)",
+    "expectedBalance": "Expected Balance",
+    "cashSales": "Cash Sales",
+    "cashReceived": "Cash Received",
+    "lastOpened": "Last opened",
+    "salesTrend": "Sales Trend",
+    "totalSales": "Total Sales",
+    "totalProfit": "Total Profit",
+    "totalTransactions": "Total Transactions",
+    "monthlyReport": "Monthly Report",
+    "exportExcel": "Export to Excel",
+    "exportReport": "Export Report",
+    "exportDaily": "Export Today's Report",
+    "exportMonthly": "Export Monthly Report",
+    "customRange": "Custom Date Range",
+    "exportCustom": "Export Custom Range",
+    "topProducts": "Top Selling Products",
+    "paymentMethods": "Payment Methods",
+    "avgSaleValue": "Avg Sale Value",
+    "inventoryManagement": "Inventory Management",
+    "supplierTracking": "Supplier Tracking",
+    "restockItems": "Restock Items",
+    "allStockNormal": "All items are well stocked",
+    "lowStockAlert": "Low Stock Alert",
+    "itemsNeedRestock": "items need immediate restocking",
+    "manageSuppliers": "Manage Suppliers",
+    "allSuppliersUpToDate": "All suppliers are up to date",
+    "overduePayments": "Overdue Payments",
+    "upcomingVisits": "Upcoming Visits",
+    "visitReminder": "Visit Reminder",
+    "paymentDue": "Payment Due",
+    "recordPayment": "Record Payment",
+    "markVisited": "Mark Visited",
+    "viewDetails": "View Details"
   },
   "pos": {
     "title": "Point of Sale",
@@ -259,7 +320,21 @@
   "reports": {
     "viewReports": "View sales and business reports",
     "title": "Reports & Analytics",
-    "comingSoon": "Reports and analytics interface will be implemented in upcoming tasks."
+    "comingSoon": "Reports and analytics interface will be implemented in upcoming tasks.",
+    "subtitle": "Comprehensive business insights and analytics",
+    "salesReport": "Sales Report",
+    "topProducts": "Top Products",
+    "supplierPerformance": "Supplier Performance",
+    "inventoryReport": "Inventory Report",
+    "dailySalesBreakdown": "Daily Sales Breakdown",
+    "topSellingProducts": "Top Selling Products",
+    "supplierAnalytics": "Supplier Performance Analytics",
+    "inventoryAnalytics": "Inventory Analytics",
+    "exportSales": "Export Sales Data",
+    "exportProducts": "Export Product Data",
+    "exportSuppliers": "Export Supplier Data",
+    "inventoryDescription": "Detailed inventory reports with stock levels, movement history, and reorder recommendations.",
+    "viewInventory": "View Inventory Details"
   },
   "settings": {
     "systemSettings": "Configure system settings",
