--- a/src/locales/si.json
+++ b/src/locales/si.json
@@ -332,16 +332,99 @@
     "manageCustomers": "Manage customer accounts"
   },
   "dashboard": {
-    "lowStock": "Low Stock Items",
-    "pendingPayments": "Pending Payments"
+    "welcome": "ආයුබෝවන්",
+    "todaySales": "අද විකුණුම්",
+    "todayCosts": "අද වියදම්",
+    "todayProfit": "අද ලාභය",
+    "transactions": "ගනුදෙනු",
+    "lowStockItems": "අඩු තොග අයිතම",
+    "pendingPayments": "අවලංගු ගෙවීම්",
+    "cashInDrawer": "ලාච්චුවේ මුදල්",
+    "pendingReceivables": "ලැබිය යුතු මුදල්",
+    "pendingPayables": "ගෙවිය යුතු මුදල්",
+    "systemStatus": "පද්ධති තත්ත්වය",
+    "apiStatus": "API තත්ත්වය",
+    "userRole": "පරිශීලක භූමිකාව",
+    "authenticationActive": "සත්‍යාපනය සක්‍රීය",
+    "lowStock": "අඩු තොග අයිතම",
+    "quickActions": "ක්ෂණික ක්‍රියා",
+    "pressF12": "ක්ෂණික මුදල් විකුණුම සඳහා F12 ඔබන්න",
+    "cashFlow": "මුදල් ප්‍රවාහය",
+    "moneyIn": "ඇතුළු වන මුදල්",
+    "moneyOut": "පිටවන මුදල්",
+    "currentBalance": "වර්තමාන ශේෂය",
+    "alerts": "අනතුරු ඇඟවීම්",
+    "noAlerts": "මේ වේලාවේ අනතුරු ඇඟවීම් නැත",
+    "takeAction": "ක්‍රියාමාර්ගය ගන්න",
+    "justNow": "දැන්",
+    "minutesAgo": "මිනිත්තු {{count}} කට පෙර",
+    "hoursAgo": "පැය {{count}} කට පෙර",
+    "daysAgo": "දින {{count}} කට පෙර",
+    "overduePayment": "කල් ඉකුත් ගෙවීම",
+    "cashDrawer": "මුදල් ලාච්චුව",
+    "system": "පද්ධතිය",
+    "notification": "දැනුම්දීම",
+    "openDrawer": "ලාච්චුව විවෘත කරන්න",
+    "closeDrawer": "ලාච්චුව වසන්න",
+    "openCashDrawer": "මුදල් ලාච්චුව විවෘත කරන්න",
+    "closeCashDrawer": "මුදල් ලාච්චුව වසන්න",
+    "openingBalance": "ආරම්භක ශේෂය",
+    "actualBalance": "සැබෑ ශේෂය (මුදල් ගණන් කරන්න)",
+    "expectedBalance": "අපේක්ෂිත ශේෂය",
+    "cashSales": "මුදල් විකුණුම්",
+    "cashReceived": "ලැබුණු මුදල්",
+    "lastOpened": "අවසන් වරට විවෘත කළේ",
+    "salesTrend": "විකුණුම් ප්‍රවණතාව",
+    "totalSales": "මුළු විකුණුම්",
+    "totalProfit": "මුළු ලාභය",
+    "totalTransactions": "මුළු ගනුදෙනු",
+    "monthlyReport": "මාසික වාර්තාව",
+    "exportExcel": "Excel වෙත නිර්යාත කරන්න",
+    "exportReport": "වාර්තාව නිර්යාත කරන්න",
+    "exportDaily": "අද වාර්තාව නිර්යාත කරන්න",
+    "exportMonthly": "මාසික වාර්තාව නිර්යාත කරන්න",
+    "customRange": "අභිරුචි දින පරාසය",
+    "exportCustom": "අභිරුචි පරාසය නිර්යාත කරන්න",
+    "topProducts": "ඉහළම විකුණුම් නිෂ්පාදන",
+    "paymentMethods": "ගෙවීම් ක්‍රම",
+    "avgSaleValue": "සාමාන්‍ය විකුණුම් වටිනාකම",
+    "inventoryManagement": "තොග කළමනාකරණය",
+    "supplierTracking": "සැපයුම්කරු ලුහුබැඳීම",
+    "restockItems": "නැවත තොග කරන්න",
+    "allStockNormal": "සියලුම අයිතම හොඳින් තොගගත කර ඇත",
+    "lowStockAlert": "අඩු තොග අනතුරු ඇඟවීම",
+    "itemsNeedRestock": "අයිතම වහාම නැවත තොග කිරීම අවශ්‍යයි",
+    "manageSuppliers": "සැපයුම්කරුවන් කළමනාකරණය",
+    "allSuppliersUpToDate": "සියලුම සැපයුම්කරුවන් යාවත්කාලීනයි",
+    "overduePayments": "කල් ඉකුත් ගෙවීම්",
+    "upcomingVisits": "ඉදිරි සංචාර",
+    "visitReminder": "සංචාර සිහිකැඳවීම",
+    "paymentDue": "ගෙවීම් කල් ඉකුත්",
+    "recordPayment": "ගෙවීම සටහන් කරන්න",
+    "markVisited": "සංචාරය කළ ලෙස සලකුණු කරන්න",
+    "viewDetails": "විස්තර බලන්න"
   },
   "products": {
     "manageProducts": "Manage product inventory"
   },
   "showHeldSales": "showHeldSales",
   "reports": {
-    "title": "Reports & Analytics",
-    "comingSoon": "Reports and analytics interface will be implemented in upcoming tasks."
+    "title": "වාර්තා සහ විශ්ලේෂණ",
+    "comingSoon": "වාර්තා සහ විශ්ලේෂණ අතුරුමුඛය ඉදිරි කාර්යයන්හිදී ක්‍රියාත්මක කරනු ලැබේ.",
+    "subtitle": "සවිස්තරාත්මක ව්‍යාපාරික තීක්ෂ්ණ බුද්ධිය සහ විශ්ලේෂණ",
+    "salesReport": "විකුණුම් වාර්තාව",
+    "topProducts": "ඉහළම නිෂ්පාදන",
+    "supplierPerformance": "සැපයුම්කරු කාර්ය සාධනය",
+    "inventoryReport": "තොග වාර්තාව",
+    "dailySalesBreakdown": "දෛනික විකුණුම් බිඳීම",
+    "topSellingProducts": "ඉහළම විකුණුම් නිෂ්පාදන",
+    "supplierAnalytics": "සැපයුම්කරු කාර්ය සාධන විශ්ලේෂණ",
+    "inventoryAnalytics": "තොග විශ්ලේෂණ",
+    "exportSales": "විකුණුම් දත්ත නිර්යාත කරන්න",
+    "exportProducts": "නිෂ්පාදන දත්ත නිර්යාත කරන්න",
+    "exportSuppliers": "සැපයුම්කරු දත්ත නිර්යාත කරන්න",
+    "inventoryDescription": "තොග මට්ටම්, චලන ඉතිහාසය සහ නැවත ඇණවුම් නිර්දේශ සමඟ සවිස්තරාත්මක තොග වාර්තා.",
+    "viewInventory": "තොග විස්තර බලන්න"
   },
   "suppliers": {
     "title": "Supplier Management",
