--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -332,16 +332,99 @@
     "manageCustomers": "Manage customer accounts"
   },
   "dashboard": {
-    "lowStock": "Low Stock Items",
-    "pendingPayments": "Pending Payments"
+    "welcome": "வணக்கம்",
+    "todaySales": "இன்றைய விற்பனை",
+    "todayCosts": "இன்றைய செலவுகள்",
+    "todayProfit": "இன்றைய லாபம்",
+    "transactions": "பரிவர்த்தனைகள்",
+    "lowStockItems": "குறைந்த இருப்பு பொருட்கள்",
+    "pendingPayments": "நிலுவையில் உள்ள பணம்",
+    "cashInDrawer": "பணப்பெட்டியில் பணம்",
+    "pendingReceivables": "பெறத்தக்க பணம்",
+    "pendingPayables": "செலுத்தத்தக்க பணம்",
+    "systemStatus": "கணினி நிலை",
+    "apiStatus": "API நிலை",
+    "userRole": "பயனர் பங்கு",
+    "authenticationActive": "அங்கீகாரம் செயலில்",
+    "lowStock": "குறைந்த இருப்பு பொருட்கள்",
+    "quickActions": "விரைவு செயல்கள்",
+    "pressF12": "விரைவு பண விற்பனைக்கு F12 அழுத்தவும்",
+    "cashFlow": "பண ஓட்டம்",
+    "moneyIn": "உள்வரும் பணம்",
+    "moneyOut": "வெளியேறும் பணம்",
+    "currentBalance": "தற்போதைய இருப்பு",
+    "alerts": "எச்சரிக்கைகள்",
+    "noAlerts": "இந்த நேரத்தில் எச்சரிக்கைகள் இல்லை",
+    "takeAction": "நடவடிக்கை எடுக்கவும்",
+    "justNow": "இப்போது",
+    "minutesAgo": "{{count}} நிமிடங்களுக்கு முன்",
+    "hoursAgo": "{{count}} மணி நேரத்திற்கு முன்",
+    "daysAgo": "{{count}} நாட்களுக்கு முன்",
+    "overduePayment": "தாமதமான பணம்",
+    "cashDrawer": "பணப்பெட்டி",
+    "system": "கணினி",
+    "notification": "அறிவிப்பு",
+    "openDrawer": "பெட்டியை திறக்கவும்",
+    "closeDrawer": "பெட்டியை மூடவும்",
+    "openCashDrawer": "பணப்பெட்டியை திறக்கவும்",
+    "closeCashDrawer": "பணப்பெட்டியை மூடவும்",
+    "openingBalance": "தொடக்க இருப்பு",
+    "actualBalance": "உண்மையான இருப்பு (பணம் எண்ணவும்)",
+    "expectedBalance": "எதிர்பார்க்கப்பட்ட இருப்பு",
+    "cashSales": "பண விற்பனை",
+    "cashReceived": "பெறப்பட்ட பணம்",
+    "lastOpened": "கடைசியாக திறக்கப்பட்டது",
+    "salesTrend": "விற்பனை போக்கு",
+    "totalSales": "மொத்த விற்பனை",
+    "totalProfit": "மொத்த லாபம்",
+    "totalTransactions": "மொத்த பரிவர்த்தனைகள்",
+    "monthlyReport": "மாதாந்திர அறிக்கை",
+    "exportExcel": "Excel க்கு ஏற்றுமதி",
+    "exportReport": "அறிக்கையை ஏற்றுமதி",
+    "exportDaily": "இன்றைய அறிக்கையை ஏற்றுமதி",
+    "exportMonthly": "மாதாந்திர அறிக்கையை ஏற்றுமதி",
+    "customRange": "தனிப்பயன் தேதி வரம்பு",
+    "exportCustom": "தனிப்பயன் வரம்பை ஏற்றுமதி",
+    "topProducts": "சிறந்த விற்பனை பொருட்கள்",
+    "paymentMethods": "பணம் செலுத்தும் முறைகள்",
+    "avgSaleValue": "சராசரி விற்பனை மதிப்பு",
+    "inventoryManagement": "சரக்கு மேலாண்மை",
+    "supplierTracking": "சப்ளையர் கண்காணிப்பு",
+    "restockItems": "மீண்டும் சரக்கு சேர்க்கவும்",
+    "allStockNormal": "அனைத்து பொருட்களும் நன்றாக சரக்கு உள்ளது",
+    "lowStockAlert": "குறைந்த சரக்கு எச்சரிக்கை",
+    "itemsNeedRestock": "பொருட்கள் உடனடியாக மீண்டும் சரக்கு தேவை",
+    "manageSuppliers": "சப்ளையர்களை நிர்வகிக்கவும்",
+    "allSuppliersUpToDate": "அனைத்து சப்ளையர்களும் புதுப்பிக்கப்பட்டுள்ளனர்",
+    "overduePayments": "தாமதமான பணம்",
+    "upcomingVisits": "வரவிருக்கும் வருகைகள்",
+    "visitReminder": "வருகை நினைவூட்டல்",
+    "paymentDue": "பணம் செலுத்த வேண்டிய",
+    "recordPayment": "பணம் பதிவு செய்யவும்",
+    "markVisited": "வருகை செய்ததாக குறிக்கவும்",
+    "viewDetails": "விவரங்களை பார்க்கவும்"
   },
   "products": {
     "manageProducts": "Manage product inventory"
   },
   "showHeldSales": "showHeldSales",
   "reports": {
-    "title": "Reports & Analytics",
-    "comingSoon": "Reports and analytics interface will be implemented in upcoming tasks."
+    "title": "அறிக்கைகள் மற்றும் பகுப்பாய்வு",
+    "comingSoon": "அறிக்கைகள் மற்றும் பகுப்பாய்வு இடைமுகம் வரவிருக்கும் பணிகளில் செயல்படுத்தப்படும்.",
+    "subtitle": "விரிவான வணிக நுண்ணறிவு மற்றும் பகுப்பாய்வு",
+    "salesReport": "விற்பனை அறிக்கை",
+    "topProducts": "சிறந்த பொருட்கள்",
+    "supplierPerformance": "சப்ளையர் செயல்திறன்",
+    "inventoryReport": "சரக்கு அறிக்கை",
+    "dailySalesBreakdown": "தினசரி விற்பனை பிரிவு",
+    "topSellingProducts": "சிறந்த விற்பனை பொருட்கள்",
+    "supplierAnalytics": "சப்ளையர் செயல்திறன் பகுப்பாய்வு",
+    "inventoryAnalytics": "சரக்கு பகுப்பாய்வு",
+    "exportSales": "விற்பனை தரவை ஏற்றுமதி",
+    "exportProducts": "பொருள் தரவை ஏற்றுமதி",
+    "exportSuppliers": "சப்ளையர் தரவை ஏற்றுமதி",
+    "inventoryDescription": "சரக்கு நிலைகள், இயக்க வரலாறு மற்றும் மீண்டும் ஆர்டர் பரிந்துரைகளுடன் விரிவான சரக்கு அறிக்கைகள்.",
+    "viewInventory": "சரக்கு விவரங்களை பார்க்கவும்"
   },
   "suppliers": {
     "title": "Supplier Management",
